# LLM-GO

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/: large.yaml  medium.yaml  small.yaml
data/: patterns_preview.jsonl
scripts/: build_tokenizer.sh  collect_data.sh  deploy_huggingface.sh  evaluate.sh  generate.sh  preprocess.sh  setup_env.sh  train.sh
src/llm_go/: __init__.py  config.py
src/llm_go/data/: __init__.py  collector.py  dataset.py  go_best_practices.py  preprocessor.py
src/llm_go/data/patterns/: __init__.py  auth_patterns.py  docker_patterns.py  fiber_patterns.py  gorm_patterns.py  registry.py  service_patterns.py  test_patterns.py
src/llm_go/data/templates/: __init__.py  loader.py
src/llm_go/data/templates/go_project/: go.mod
src/llm_go/data/templates/go_project/cmd/cli/: main.go
src/llm_go/data/templates/go_project/cmd/server/: main.go
src/llm_go/data/templates/go_project/cmd/worker/: main.go
src/llm_go/deployment/: __init__.py  hf_uploader.py
src/llm_go/evaluation/: __init__.py  metrics.py
src/llm_go/model/: __init__.py  attention.py  transformer.py
src/llm_go/scripts/: collect.py  deploy.py  evaluate.py  generate.py  tokenize.py  train.py
src/llm_go/tokenizer/: __init__.py  go_tokenizer.py
src/llm_go/training/: __init__.py  lr_schedule.py  trainer.py
tests/: conftest.py  test_best_practices.py  test_model.py  test_tokenizer.py
